--- a/src/Components/Player.css
+++ b/src/Components/Player.css
@@ -5,8 +5,7 @@
     border: none;
     height: 100vh;
     flex: 0.2;
-    background: linear-gradient(to bottom, #e3ecf8,#357ddb);
-    color: rgb(17, 17, 16);
+    background: black;
 }
 .SbLogo{
     height: 80px;
@@ -16,7 +15,7 @@
     border: none;
     height: 100vh;
     flex: 0.8;
-    background: linear-gradient(to bottom, #ffbbf4, #e271f8,#b576f0,#539af7,#35758f);
+    background: linear-gradient(to bottom, #51d1586b,#0e8b2daf,#073f1be0,#0a0a0aea);
     color: rgb(243, 245, 235);
 }
 
