--- a/src/Components/SbOption.css
+++ b/src/Components/SbOption.css
@@ -1,10 +1,24 @@
 .SbOption{
-    color: rgb(10, 10, 10);
+    color: rgb(252, 248, 248);
     padding: 20px;
     height: 10px;
     cursor: pointer;
-    transition: 200ms color ease-in;    
+    transition: 200ms color ease-in; 
+    display:flex;   
+
 }
+.PL{
+    color: whitesmoke;
+    justify-content: left;
+    margin-right: 10px;
+    padding: 20px;
+
+}
+
 .SbOption:hover{
-    color:rgb(164, 66, 245)
+    color:rgb(66, 245, 105)
+}
+.SbOption_Icon{
+    padding-left: 10px;
+    padding-right: 10px;
 }
