--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -4,7 +4,8 @@
     height: 65px;
     width: 100%;
     padding: 20px;
-    background: rgba(0, 0, 0, 0.445);
-    color: whitesmoke;
-    border:none
+    background: #3e3f41fa;
+    color: #e9e9f1;
+    justify-content: space-between;
+    display: flex
 }
