--- a/src/Components/SbOption.css
+++ b/src/Components/SbOption.css
@@ -1,22 +1,28 @@
 .SbOption{
-    color: rgb(252, 248, 248);
+    color: #26275f;
     padding: 20px;
     height: 10px;
     cursor: pointer;
     transition: 200ms color ease-in; 
     display:flex;   
-
 }
+
 .PL{
-    color: whitesmoke;
+    color: #26275f;
     justify-content: left;
     margin-right: 10px;
     padding: 20px;
-
+}
+.SideBar>hr{
+    border: 0.2px solid #26275f;
+    width: 90%;
+    margin: 10px auto
 }
 
+
+
 .SbOption:hover{
-    color:rgb(66, 245, 105)
+    color:#111111b7
 }
 .SbOption_Icon{
     padding-left: 10px;
